<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notes_conteiner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:padding="8dp"
                android:layout_alignParentStart="true"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"/>
            <ImageView
                android:id="@+id/imageView_pin"
                android:src="@drawable/pinicon"
                android:layout_alignParentEnd="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo" />

        </RelativeLayout>

    <TextView
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:padding="8dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="10"
        android:padding="8dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/date"
        android:textColor="#757575"
        android:textSize="14sp"
        android:textStyle="normal" />



</androidx.cardview.widget.CardView>