<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".NotesTakeractivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageView_save"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_save"
            android:padding="6dp"
            android:background="@android:color/transparent"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            tools:ignore="ContentDescription" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notestaker"
        android:minHeight="48dp"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editText_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"

        android:textStyle="normal"
        tools:ignore="Autofill" />


    

</LinearLayout>